--- a/.travis.yml
+++ b/.travis.yml
@@ -20,9 +20,8 @@ matrix:
       script:
         - cmake -H. -Bout/linux/x64/release -DESCARGOT_HOST=linux -DESCARGOT_ARCH=x64 -DESCARGOT_MODE=release -DESCARGOT_OUTPUT=bin -GNinja
         - ninja -Cout/linux/x64/release
-        - cp ./out/linux/x64/release/escargot ./escargot
-        - travis_wait tools/run-tests.py --arch=x86_64 jetstream-only-simple
-        - tools/run-tests.py --arch=x86_64 jetstream-only-cdjs sunspider-js test262 internal octane chakracore jsc-stress
+        - travis_wait tools/run-tests.py --engine=out/linux/x64/release/escargot --arch=x86_64 jetstream-only-simple
+        - tools/run-tests.py --engine=out/linux/x64/release/escargot --arch=x86_64 jetstream-only-cdjs sunspider-js test262 internal octane chakracore jsc-stress
 
     - name: "x64.debug"
       install:
@@ -30,8 +29,7 @@ matrix:
       script:
         - cmake -H. -Bout/linux/x64/debug -DESCARGOT_HOST=linux -DESCARGOT_ARCH=x64 -DESCARGOT_MODE=debug -DESCARGOT_OUTPUT=bin -GNinja
         - ninja -Cout/linux/x64/debug
-        - cp ./out/linux/x64/debug/escargot ./escargot
-        - tools/run-tests.py --arch=x86_64 jetstream-only-cdjs sunspider-js test262 internal
+        - tools/run-tests.py --engine=out/linux/x64/debug/escargot --arch=x86_64 jetstream-only-cdjs sunspider-js test262 internal
 
     - name: "x86.release"
       install:
@@ -40,9 +38,8 @@ matrix:
       script:
         - cmake -H. -Bout/linux/x86/release -DESCARGOT_HOST=linux -DESCARGOT_ARCH=x86 -DESCARGOT_MODE=release -DESCARGOT_OUTPUT=bin -GNinja
         - ninja -Cout/linux/x86/release
-        - cp ./out/linux/x86/release/escargot ./escargot
-        - travis_wait tools/run-tests.py --arch=x86 jetstream-only-simple
-        - tools/run-tests.py --arch=x86 jetstream-only-cdjs sunspider-js test262 internal octane chakracore jsc-stress
+        - travis_wait tools/run-tests.py --engine=out/linux/x86/release/escargot --arch=x86 jetstream-only-simple
+        - tools/run-tests.py --engine=out/linux/x86/release/escargot --arch=x86 jetstream-only-cdjs sunspider-js test262 internal octane chakracore jsc-stress
 
     - name: "x86.debug"
       install:
@@ -51,8 +48,7 @@ matrix:
       script:
         - cmake -H. -Bout/linux/x86/debug -DESCARGOT_HOST=linux -DESCARGOT_ARCH=x86 -DESCARGOT_MODE=debug -DESCARGOT_OUTPUT=bin -GNinja
         - ninja -Cout/linux/x86/debug
-        - cp ./out/linux/x86/debug/escargot ./escargot
-        - tools/run-tests.py --arch=x86 jetstream-only-cdjs sunspider-js test262 internal
+        - tools/run-tests.py --engine=out/linux/x86/debug/escargot --arch=x86 jetstream-only-cdjs sunspider-js test262 internal
 
     - name: "x64.release (-DVENDORTEST=1)"
       install:
@@ -62,8 +58,7 @@ matrix:
       script:
         - cmake -H. -Bout/linux/x64/release -DESCARGOT_HOST=linux -DESCARGOT_ARCH=x64 -DESCARGOT_MODE=release -DESCARGOT_OUTPUT=bin -DVENDORTEST=1 -GNinja
         - ninja -Cout/linux/x64/release
-        - cp ./out/linux/x64/release/escargot ./escargot
-        - tools/run-tests.py --arch=x86_64 v8 spidermonkey
+        - tools/run-tests.py --engine=out/linux/x64/release/escargot --arch=x86_64 v8 spidermonkey
 
     - name: "x86.release (-DVENDORTEST=1)"
       install:
@@ -74,8 +69,7 @@ matrix:
       script:
         - cmake -H. -Bout/linux/x86/release -DESCARGOT_HOST=linux -DESCARGOT_ARCH=x86 -DESCARGOT_MODE=release -DESCARGOT_OUTPUT=bin -DVENDORTEST=1 -GNinja
         - ninja -Cout/linux/x86/release
-        - cp ./out/linux/x86/release/escargot ./escargot
-        - tools/run-tests.py --arch=x86 v8 spidermonkey
+        - tools/run-tests.py --engine=out/linux/x86/release/escargot --arch=x86 v8 spidermonkey
 
     - name: "SonarQube"
       addons:
